# flyer

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  Dockerfile.dev  devcontainer.json
flyer/: __init__.py  main.py
flyer/api/home/: hello.py
flyer/api/teacher/: __init__.py  add.py  consult.py  delete.py  update.py
scripts/: poetry.py
tests/: configtest.py
tests/api/home/: hello_test.py
tests/api/teacher/: add_test.py  consult_test.py  delete_test.py  update_test.py
