[tool.poetry]
name = "flyer"
version = "0.1.0"
description = ""
authors = [
    "Lucas Oliveira <olivmath@protonmail.com>"
]

[tool.poetry.dependencies]
uvicorn = "^0.17.5"
fastapi = "^0.74.1"
peewee = "^3.14.9"
httpx = "^0.22.0"
python = "^3.7"

[tool.poetry.dev-dependencies]
httpx = {extras = ["cli"], version = "^0.22.0"}
pytest = "7.0.0"
requests = "^2.27.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
up = "scripts.poetry:up"
t = "scripts.poetry:t"

[tool.pytest.ini_options]
markers = [
    "now: marks current dev test"
]
